data/issues_nolabel/nolabel_test_18458.txt
Fix compilation of split with SYCL enabled

ERROR: /home/tomeu/opencl-prefix/source/tensorflow/tensorflow/core/kernels/BUILD:436:1: C++ compilation of rule '//tensorflow/core/kernels:split_lib' failed (Exit 1)
In file included from tensorflow/core/kernels/split_lib_cpu.cc:18:0:
./tensorflow/core/kernels/split_lib.h:53:34: error: wrong number of template arguments (2, should be 3)
struct Split<Eigen::SyclDevice, T> {
^
./tensorflow/core/kernels/split_lib.h:35:8: note: provided for ‘template<class Device, class T, int NDims> struct tensorflow::functor::Split’
struct Split {
^~~~~
Signed-off-by: Tomeu Vizoso tomeu.vizoso@collabora.com
Fixes: 93f5dd5 ("Optimized non-aligned case of split and split_v on the first input dimension.")